Fixed overlap with footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,14 +27,12 @@
 }
 html,
 body {
-   height: 100%;
-   width: 100%;
-   margin: 0;
+   min-height: 100vh;
    display: flex;
    flex-direction: column;
 }
 main {
-   height: 100vh;
+   min-height: 100vh;
    background-color: #f5f5f5;
 }
 p {
@@ -85,5 +83,5 @@ h1 {
    The styles for the footer
 ************************************************/
 .footer {
-   text-align: center;
+   margin-top: auto;
 }
